# itsy-gitsy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config-dark.toml  config.toml  settings.toml
examples/csv/: README  csv.toml
examples/csv/templates/: repos.html
examples/mdbook/: README  book.toml  mdbook.toml
examples/mdbook/templates/: branches.html  history.html  repo.html  sidebar.html  tags.html
src/: generate.rs  git.rs  main.rs  settings.rs  template.rs  util.rs
templates/: 404.html  base.html  branch.html  branches.html  commit.html  dir.html  file.html  files.html  footer.html  header.html  history.html  repos.html  style.css  subheader.html  summary.html  tag.html  tags.html
templates/default_dark/: 404.html  branch.html  branches.html  commit.html  dir.html  files.html  footer.html  repos.html  style.css  summary.html  tag.html  tags.html
templates/default_light/: branch.html  file.html  header.html  style.css  summary.html  tag.html  tags.html
