[package]
name = "itsy-gitsy"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Bentley <gitsy@trevorbentley.com>"]
description = "Static site generator for git repositories"
keywords = ["git", "website", "frontend", "development"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/mrmekon/itsy-gitsy"
repository = "https://github.com/mrmekon/itsy-gitsy"
readme = "README.md"
license = "GPL-3.0-or-later"


[dependencies]
chrono = { version = "0.4.23", features=["clock"] }
clap = { version="4.0.32", features=["derive"] }
git2 = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
tera = "1.17.1"
toml = "0.5.10"
